@@ -1,0 +1,10 @@
+"""Functional test"""
+
+while True:  # [while-used]
+    print("asdf")
+
+def fff():
+    "zxcv"
+    i = 0
+    while i < 10:  # [while-used]
+        i += 1
